finished fixing spacing issues

--- a/css/contact.scss
+++ b/css/contact.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 
+
 #contact {
     background-color: $main-black;
     color: $main-white;
@@ -12,7 +13,7 @@
     font-weight: 100;
     display: flex;
     flex-direction: column;
-    background-color: red;
+    background-color: yellow;
     margin: 10px;
 }
 
