--- a/css/main.scss
+++ b/css/main.scss
@@ -12,10 +12,6 @@ p {
     line-height: 46px;
     font-size: 17px;
 }
-.words{
-    background-color: yellow;
-
-}
 
 /*...........................MEDIA QUERIES...........................*/
 
